package com.dreamdevs.election.exception;

public class ElectionException extends RuntimeException {
    public ElectionException(String message) {
        super(message);
    }
}
